--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="intro_text">Hocus\nPocus\nI Need Coffee\nto Focus</string>
     <string name="bring_my_coffee">bring my coffee</string>
     <string name="good_morning">Good Morning</string>
-    <string name="zyad">Zyad</string>
+    <string name="zyad">Zyad ☀</string>
     <string name="what_would_you_like_to_drink_today">What would you like to drink today?</string>
     <string name="black">Black</string>
     <string name="latte">Latte</string>
